<resources>
    <string name="app_name">eie3109Assignment</string>
    <!-- Main -->

    <string name="btnPart1Text">Part1</string>
    <string name="btnPart2Text">Part2</string>
    <string name="btnPart3Text">Part3</string>

    <!-- Part1 -->
    <string name="part1Img1Des">imageToChange</string>
    <string name="part1img2Des">imageOriginal</string>
    <string name="part1BtnBiggerText">BIGGER</string>
    <string name="part1BtnSmallerText">SMALLER</string>
    <string name="part1BtnBackText">BACK</string>

    <!-- Part2 -->

    <string name="part2Btn1Text">1</string>
    <string name="part2Btn2Text">2</string>
    <string name="part2Btn3Text">3</string>
    <string name="part2Btn4Text">4</string>
    <string name="part2Btn5Text">5</string>
    <string name="part2Btn6Text">6</string>
    <string name="part2Btn7Text">7</string>
    <string name="part2Btn8Text">8</string>
    <string name="part2Btn9Text">9</string>
    <string name="part2Btn0Text">0</string>
    <string name="part2BtnPiText">\u03C0</string>
    <string name="part2BtnEText">e</string>
    <string name="part2BtnEqualText">=</string>
    <string name="part2BtnAddText">+</string>
    <string name="part2BtnSubtractText">-</string>
    <string name="part2BtnMultiplyText">*</string>
    <string name="part2BtnDivideText">/</string>
    <string name="part2BtnSinText">sin</string>
    <string name="part2BtnCosText">cos</string>
    <string name="part2BtnCText">c</string>

    <!-- Part3 -->
</resources>
