<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Part1Activity">

    <ImageView
        android:id="@+id/part1ImgToChange"
        android:layout_width="@dimen/part2BtnSize"
        android:layout_height="@dimen/part2BtnSize"
        android:layout_marginTop="@dimen/topMargin"
        android:contentDescription="@string/part1Img1Des"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:color/holo_blue_bright" />

    <Button
        android:id="@+id/part1BtnBigger"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/part2BtnSize"
        app:layout_constraintTop_toBottomOf="@+id/part1ImgToChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/part1BtnBiggerText" />

    <Button
        android:id="@+id/part1BtnSmaller"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/part2BtnSize"
        app:layout_constraintTop_toBottomOf="@+id/part1BtnBigger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/part1BtnSmallerText" />

    <Button
        android:id="@+id/part1BtnBack"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/part2BtnSize"
        app:layout_constraintTop_toBottomOf="@+id/part1BtnSmaller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/part1BtnBackText" />

    <ImageView
        android:id="@+id/part1ImgOriginal"
        android:layout_width="@dimen/part2BtnSize"
        android:layout_height="@dimen/part2BtnSize"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/part1img2Des"
        app:layout_constraintTop_toBottomOf="@+id/part1BtnBack"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:color/holo_green_light" />

</androidx.constraintlayout.widget.ConstraintLayout>